@@ -35,6 +35,7 @@ __all__ = [
 KNOWN_RESPONSE_CONTROLS = {}
 
 import _ldap,ldap
+from pyasn1.error import PyAsn1Error
 
 
 class RequestControl:
@@ -138,8 +139,13 @@ def DecodeControlTuples(ldapControlTuples,knownLDAPControls=None):
         raise ldap.UNAVAILABLE_CRITICAL_EXTENSION('Received unexpected critical response control with controlType %s' % (repr(controlType)))
     else:
       control.controlType,control.criticality = controlType,criticality
-      control.decodeControlValue(encodedControlValue)
-      result.append(control)
+      try:
+        control.decodeControlValue(encodedControlValue)
+      except PyAsn1Error,e:
+        if criticality:
+          raise e
+      else:
+        result.append(control)
   return result
 
 
