@@ -4,7 +4,9 @@ Released 2.4.11 2012-07-xx
 Changes since 2.4.10:
 
 Lib/
-* 
+* ldap.controls.DecodeControlTuples() now simply ignores
+  PyAsn1Error exception raised during decoding malformed
+  response control values in case of non-critical controls.
 
 Demo/
 * 
